samples/_failures_safe/1761093898_f279a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_803e67cb.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_803e67cb.c:142:18: error: expected ‘;’ at end of input
  142 |     return result
      |                  ^
      |                  ;
./samples/SAFE/__tmp_803e67cb.c:142:5: error: expected declaration or statement at end of input
  142 |     return result
      |     ^~~~~~
